实现vector容器部分功能，并使其支持无默认构造类型，同时了解了内存分配与构造过程分离和手动构造

--- a/C++vector容器/C++vector容器/C++vector容器.vcxproj.filters
+++ b/C++vector容器/C++vector容器/C++vector容器.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Source File\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Source File\Vector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source File\Vector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
