--- a/C++vector容器/C++vector容器/C++vector容器.vcxproj
+++ b/C++vector容器/C++vector容器/C++vector容器.vcxproj
@@ -148,6 +148,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source File\main.cpp" />
+    <ClCompile Include="Source File\Vector.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source File\Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
